--- a/style.css
+++ b/style.css
@@ -3,8 +3,32 @@
     text-align: center; 
     background: #000000; 
     color: white; 
-  }
+}
   
-  .header h1 {
+.header h1 {
     font-size: 40px;
-  }
+}
+
+.navigation {
+    overflow: hidden; 
+    background-color: #6e6e6e; 
+}
+
+.navigation a {
+    float: left; 
+    display: block; 
+    color: white; 
+    text-align: center; 
+    padding: 16px 22px;
+    text-decoration: none; 
+}
+
+.navigation a.right {
+    float: right;
+}
+  
+
+.navbar a:hover {
+    background-color: #bebebe; 
+    color: black; 
+}
