--- a/style.css
+++ b/style.css
@@ -32,3 +32,20 @@
     background-color: #bebebe; 
     color: black; 
 }
+
+.contact {
+    border-radius: 5px;
+    background-color: #b4b2b2;
+    padding: 20px;
+  }
+
+input[type=text], textarea {
+    padding: 12px; 
+    border: 1px solid #d1cfcf; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px; 
+    resize: vertical 
+    width: 100%; 
+}
