--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     display: block; 
     color: white; 
     text-align: center; 
-    padding: 16px 20x;
+    padding: 16px 22px;
     text-decoration: none; 
 }
 
