--- a/style.css
+++ b/style.css
@@ -49,3 +49,10 @@ input[type=text], textarea {
     resize: vertical; 
     width: 100%; 
 }
+
+.contactlinks {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
