--- a/style.css
+++ b/style.css
@@ -54,5 +54,6 @@ input[type=text], textarea {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    height: 50%;
     width: 50%;
 }
