--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ input[type=text], textarea {
     width: 100%; 
 }
 
-.contactlinks {
+.centerimg {
     display: block;
     margin-left: auto;
     margin-right: auto;
